src/api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api

spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 80
      targetPort: 5000
